# diet-mcp

./: .env.example  .gitignore  Brewfile  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  server.py
legacy/: server.py  test_server.py  web_server.py
scripts/: migrate_json_to_sqlite.py
src/diet_mcp/: auth.py  db.py  models.py  oauth_provider.py  pkce_compat.py  server.py  tools.py
tests/: test_tools.py
